2009-10-06 Carsten Magass <magass -at- physik.rwth-aachen.de>
	* version for CMSSW_3_1_X
	* new default jet collection (antikt5CaloJets)
	* new b tagging information
	* new HCAL noise tags (hcalnoise)
	* tagged as versions v4-0
2009-07-10 Carsten Magass <magass -at- physik.rwth-aachen.de>
	* new jet collections (sisCone5CaloJets)
	* extended muons (combinedMuon, innerTrack)
	* fixed scripts
	* fixed MC truth bug (missing information in QCD samples)
	* tagged as version v3-1
2009-06-19 Carsten Magass <magass -at- physik.rwth-aachen.de>
	* new full trigger information
	* trigger match to reco muons
	* fix for running on SHERPA
	* missing event info now extracted from EventAuxiliary
	* cleanup
	* tagged as version 3-0
2009-05-07 Carsten Magass <magass -at- physik.rwth-aachen.de>
	* new variables: ele/muo TrkIsoDep, ECalIsoDep, HCalIsoDep
	* tagged as version 2-8
2009-05-05 Carsten Magass <magass -at- physik.rwth-aachen.de>
	* new variables: ele_d0, ele_sd0, ele_hits, muo_prompttight
	* updated muon pt cut of 10 GeV in cfg
	* tagged as version v2-7
2009-04-06 Carsten Magass <magass -at- physik.rwth-aachen.de>
	* moved code from test into proper directories
	* new feature: run on fast sim
	* tagged as version v2-6
2009-02-20 Carsten Magass <magass -at- physik.rwth-aachen.de>
	* bugfix dependencies & compiling (thanks to Markus)
	* tagged as version v2-5
2009-02-19 Carsten Magass <magass -at- physik.rwth-aachen.de>
        * improved analysis code & wrapper (new functionality)
	* new flag in Filler (is_MC, has to be set for data and MC accordingly) 
	* tagged as version v2-4
2009-02-16 Carsten Magass <magass -at- physik.rwth-aachen.de>
	* fix in muon d0: now wrt to primary vertex position
	* tagged as version v2-3
2009-02-16 Carsten Magass <magass -at- physik.rwth-aachen.de>
	* bug in geometry fixed
	* tagged as version v2-2
2009-02-13 Carsten Magass <magass -at- physik.rwth-aachen.de>
	* name change _TrkIso was relative => _RelTrkIso