@@ -101,6 +101,10 @@ process.ACSkimAnalysis = cms.EDFilter(
     is_MC     = cms.bool(True),  # set to 'False' for real Data !
     is_SHERPA = cms.bool(False),  # set to 'True' if running on SHERPA
 
+    # IMPORTANT for QCD ! ! !
+    pthat_low  = cms.double(-1.),
+    pthat_high = cms.double(-1.),
+
     jetTag    = jetTag,
     elecTag   = elecTag,
     muonTag   = muonTag,
@@ -131,6 +135,9 @@ switchOnTrigger( process )
 process.patTriggerSequence.remove( process.patTriggerMatcher )
 process.patTriggerEvent.patTriggerMatches  = ()
 
+# Be Careful !!!
+# process.patTrigger.processName = "HLT8E29"
+# process.patTriggerEvent.processName = "HLT8E29"
 
 ### Define the paths
 process.p = cms.Path(
